# moroz

./: BUILD  WORKSPACE  deps.bzl  go.mod
cmd/moroz/: BUILD.bazel  main.go
moroz/: BUILD.bazel  service.go  svc_preflight.go  svc_rule_download.go  svc_upload_event.go
santa/: BUILD.bazel
santaconfig/: BUILD.bazel  config.go
